--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lintfix": "run-p lintfix:*",
+    "lintfix:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "lint-staged": {
-    "*.{js,vue}": "npm run lint",
-    "*.{css,vue}": "stylelint"
+    "*.{js,vue}": "npm run lintfix:js"
   },
   "husky": {
     "hooks": {
