--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "lint": "run-p lint:*",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "run-p lintfix:*",
     "lintfix:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -23,6 +25,7 @@
   "dependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
     "fibers": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "nuxt": "^2.0.0",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2"
